Addition of user creation
Addition user signup form

--- a/views/layout.jade
+++ b/views/layout.jade
@@ -23,7 +23,7 @@ html
                 li
                   a(href='login') Login
                 li
-                  a(href='#') About
+                  a(href='signup') Signup
                 li.dropdown
                   a.dropdown-toggle(href='#', data-toggle='dropdown') Portfolio
                     span.caret
