--- a/views/signup.jade
+++ b/views/signup.jade
@@ -4,8 +4,8 @@ block content
    .container
    .col-sm-6.col-sm-offset-3
       h1
-         span.fa.fa-sign-in Login
-      form(action='/login', method='post')
+         span.fa.fa-sign-in Signup
+      form(action='/signup', method='post')
          .form-group
             label Username
             input.form-control(type='text', name='username')
